# protobuf_over_named_pipe

./: CMakeLists.txt  README.md  pipe_dream_read.cc  pipe_dream_write.cc
